<resources>
    <string name="app_name">GeoAD</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_nav_home">Guide Me Home</string>
    <string name="start_screen_text">Are you a ..?</string>
    <string name="patient_button_text">Patient</string>
    <string name="caretaker_button_text">Caretaker</string>
    <string name="caretaker_new_registration_text">New to GeoAD? Register here!</string>
    <string name="caretaker_new_login_text">Already registered? Login here!</string>
    <string name="caretaker_registration_text">Caretaker Registration</string>
    <string name="caretaker_login_text">Caretaker Login</string>
    <string name="full_name_text">Full Name</string>
    <string name="name_text">Name</string>
    <string name="date_of_birth_text">Date of Birth</string>
    <string name="phone_text">Phone</string>
    <string name="caretaker_id_text">Caretaker ID</string>
    <string name="password_text">Password</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="full_name_text_box_hint">Your Full Name</string>
    <string name="date_of_birth_text_box_hint">Your Date of Birth</string>
    <string name="phone_text_box_hint">Your Phone</string>
    <string name="password_text_box_hint">Your Password</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="patient_id_text">Patient ID</string>
    <string name="patient_login_text">Patient Login</string>
    <string name="patient_id_text_hint">Enter Patient ID</string>
    <string name="caretaker_id_text_hint">Your Caretaker ID</string>
    <string name="patient_register_text">Create New Account</string>
    <string name="patient_phone_text">Phone Number</string>
    <string name="patient_phone_text_hint">Enter Your Phone Number</string>
    <string name="new_password_text_box_hint">Enter Your Password</string>
    <string name="patient_existing_account_text">Already registered? Login Here!</string>
    <string name="patient_new_registration_text">New to GeoAD? Register Here!</string>
    <string name="new_account_text">Success!</string>
    <string name="continue_text">Press the button below to being using GeoAD</string>
    <string name="begin_text">Begin</string>
    <string name="request_text">Requests Page</string>
    <string name="map_text">Map</string>
    <string name="call_emergency_services">Call 911</string>
    <string name="call_caretaker">Call Caretaker</string>
    <string name="alternate_text">Or</string>
    <string name="request_new_text">Request New Geofence</string>
    <string name="request_change_text">Request Geofence Change</string>
    <string name="new_name_text_hint">("My House", "The Park", etc.)</string>
    <string name="submit_text">Submit Request</string>
    <string name="new_fence_name_text">Rename Geofence</string>
    <string name="change_type_text">New Geofence Type</string>
    <string name="new_size_text_hint">(In Meters)</string>
    <string name="new_type_text_hint">(Store, Home, Doctor, etc.)</string>
    <string name="new_fence_size_text">New Geofence Size</string>
    <string name="which_fence_text">Which Geofence would you like to change?</string>
    <string name="new_address_text_hint">1234 Name ST. City, Provence, Zip Code</string>
    <string name="change_text">What would you like to change it to?</string>
    <string name="request_edit_type_text">What would you like to change?</string>
    <string name="request_confirm_text">All Done!</string>
    <string name="delivery_text">Your request has been submitted</string>
    <string name="home_text">Home</string>
    <string name="title_activity_maps">Map</string>
    <string name="patient_list_text">Patient List</string>
    <string name="caretaker_id_note_text">Here is your assigned Caretaker ID that will be used for logging in. Make sure to remember it!</string>
    <string name="caretaker_id_placeholder">000000</string>
    <string name="continue_button_text">Continue</string>
    <string name="add_patient_button_text">Add Patient</string>
    <string name="patient_information_button_text">Patient Info</string>
    <string name="check_patient_location_button_text">Patient Location</string>
    <string name="manage_geofence_button_text">Manage Geofence</string>
    <string name="remove_patient_button_text">Remove Patient</string>
    <string name="remove_patient_warning_text">Are you sure you want to remove this patient?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="add_patient_info_text">Enter New Patient ID</string>
    <string name="add_button_text">Add</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="return_button_text">Return</string>
    <string name="add_geofence_button_text">Add Geofence</string>
    <string name="geofence_information_text">Geofence Information</string>
    <string name="edit_geofence_button_text">Edit Geofence</string>
    <string name="geofence_name_hint">Geofence Name</string>
    <string name="size_text">Size</string>
    <string name="size_text_box_hint">Geofence radius size</string>
    <string name="type_text">Type</string>
    <string name="address_text">Address</string>
    <string name="address_text_box_hint">Geofence address</string>
    <string name="save_changes_button_text">Save Changes</string>
    <string name="name_fence">Enter Name</string>
    <string name="save_text">Save and Close</string>
    <string name="choose_type">Enter Time</string>
    <string name="time_text">Select Amount of Time</string>
    <string name="size_select_text">Select Geofence Radius</string>
    <string name="type_fence_text">Select Fence Type</string>
    <string name="name_fence_text">Name the Geofence</string>
    <string name="type_fence">Enter Type</string>
    <string name="remove_geofence_text">Remove Geofence</string>
    <string name="remove_geofence_text_dummy">Are you sure you want to remove?</string>
    <string name="home_screen">Welcome</string>
    <string name="request_type_text">Select Request</string>
    <string name="greet_screen">Hello!</string>
    <string-array name="geofence_list">
        <item>Select</item>
        <item>Home</item>
        <item>Store</item>
        <item>Park</item>
        <item>Doctor\'s Office</item>
    </string-array>
    <string-array name="change_type">
        <item>Name</item>
        <item>Size</item>
        <item>Type</item>
        <item>Address</item>
    </string-array>
    <string-array name="fence_type">
        <item>Classic</item>
        <item>Point-of-Interest</item>
        <item>Timed</item>
    </string-array>
    <string-array name="caretaker_patient_list_dummy">
        <item>John Doe</item>
    </string-array>
    <string-array name="caretaker_manage_geofence_dummy">
        <item>Trinity Western University</item>
    </string-array>
    <string-array name="patient_information_fields">
        <item>Patient ID</item>
        <item>Name</item>
        <item>Phone Number</item>
        <item>Address</item>
    </string-array>
    <string-array name="patient_information_list_dummy">
        <item>000000</item>
        <item>John Doe</item>
        <item>111 111 1111</item>
        <item>22500 University Drive, Langley, BC, Canada | V2Y 1Y1</item>
    </string-array>
    <string-array name="geofence_information_fields">
        <item>Name</item>
        <item>Size</item>
        <item>Type</item>
        <item>Time</item>
        <item>Address</item>
    </string-array>
    <string-array name="geofence_information_list_dummy">
        <item>Trinity Western University</item>
        <item>10 km radius</item>
        <item>Home</item>
        <item>Not Timed</item>
        <item>22500 University Drive, Langley, BC, Canada | V2Y 1Y1</item>
    </string-array>
    <string-array name="geofence_list_without_select">
        <item>Home</item>
        <item>Store</item>
        <item>Park</item>
        <item>Doctor\'s Office</item>
    </string-array>
    <string-array name="geofence_size_unit">
        <item>m</item>
        <item>km</item>
    </string-array>
    <string-array name="geofence_size_unit_with_select">
        <item>Select</item>
        <item>m</item>
        <item>km</item>
    </string-array>
    <string name="title_activity_caretaker_map">Map</string>
    <string name="title_activity_patient_location">Map</string>
    <string name="enter_change_here">Enter Change Here</string>
    <string name="request_change">Request Change</string>
    <string name="set_attributes">Set Attributes</string>
    <string name="guide_me_home">guide me home</string>
    <string name="select_text">Select</string>
    <string name="logout_text">Logout</string>
    <string name="logout_warning_text">Are you sure you want to logout?</string>
</resources>