<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/patientRegisterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:text="@string/patient_register_text"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/patientPhoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/patientRegisterText"
        android:layout_alignStart="@id/newPhoneTextBox"
        android:layout_marginTop="55sp"
        android:text="@string/patient_phone_text" />

    <EditText
        android:id="@+id/newPhoneTextBox"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_below="@id/patientPhoneText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/patient_phone_text_hint"
        android:inputType="phone" />
    <TextView
        android:id="@+id/newPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPhoneTextBox"
        android:layout_alignStart="@id/newPhoneTextBox"
        android:layout_marginTop="10sp"
        android:text="@string/password_text"
        />

    <EditText
        android:id="@+id/passwordTextBox"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_below="@id/newPasswordText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/new_password_text_box_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/accountRegisterButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@id/passwordTextBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55sp"
        android:text="@string/register_text" />

    <TextView
        android:id="@+id/linkLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountRegisterButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55sp"
        android:text="@string/patient_existing_account_text"
        android:textColor="#3F51B5"
        android:textSize="24sp" />
</RelativeLayout>