<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/earth">

    <TextView
        android:id="@+id/caretakerRegistrationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75sp"
        android:layout_centerHorizontal="true"
        android:text="@string/caretaker_registration_text"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/dark_grey"
        />

    <TextView
        android:id="@+id/fullNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/caretakerRegistrationText"
        android:layout_marginTop="95sp"
        android:layout_centerHorizontal="true"
        android:text="@string/full_name_text"
        android:textColor="@color/light_grey"
        />

    <EditText
        android:id="@+id/fullNameTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullNameText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textCapWords"
        android:hint="@string/full_name_text_box_hint"
        android:textColorHint="@color/light_grey"
        android:backgroundTint="@color/light_grey"
        android:textColor="@color/light_grey"
        />

    <TextView
        android:id="@+id/dateOfBirthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_below="@id/fullNameTextBox"
        android:layout_centerHorizontal="true"
        android:text="@string/date_of_birth_text"
        android:textColor="@color/light_grey"
        />

    <EditText
        android:id="@+id/dateOfBirthTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateOfBirthText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/date_of_birth_text_box_hint"
        android:backgroundTint="@color/light_grey"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/light_grey"
        />

    <TextView
        android:id="@+id/phoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_below="@id/dateOfBirthTextBox"
        android:layout_centerHorizontal="true"
        android:text="@string/phone_text"
        android:textColor="@color/light_grey"
        />

    <EditText
        android:id="@+id/phoneTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone_text_box_hint"
        android:textColor="@color/light_grey"
        android:backgroundTint="@color/light_grey"
        android:textColorHint="@color/light_grey"
        />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneTextBox"
        android:layout_centerHorizontal="true"
        android:text="@string/password_text"
        android:textColor="@color/light_grey"
        android:layout_marginTop="15sp"
        />

    <EditText
        android:id="@+id/passwordTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_text_box_hint"
        android:textColor="@color/light_grey"
        android:textColorHint="@color/light_grey"
        android:backgroundTint="@color/light_grey"
        />

    <Button
        android:id="@+id/caretakerRegistrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTextBox"
        android:layout_marginTop="40sp"
        android:layout_centerHorizontal="true"
        android:text="@string/register_text"
        android:textColor="@color/dark_grey"
        android:backgroundTint="@color/orange"
        />

    <TextView
        android:id="@+id/inkLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/caretakerRegistrationButton"
        android:layout_marginTop="40sp"
        android:layout_centerHorizontal="true"
        android:text="@string/caretaker_new_login_text"
        android:textSize="20sp"
        android:textColor="@color/blue"
        />
</RelativeLayout>