<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/earth">

    <TextView
        android:id="@+id/caretakerLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_centerHorizontal="true"
        android:text="@string/caretaker_login_text"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/dark_grey"
        />

    <TextView
        android:id="@+id/caretakerIdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/caretakerLoginText"
        android:layout_marginTop="125sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/light_grey"
        android:text="@string/caretaker_id_text"
        />

    <EditText
        android:id="@+id/caretakerIdTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/caretakerIdText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="10sp"
        android:hint="@string/caretaker_id_text_hint"
        android:backgroundTint="@color/light_grey"
        android:textColor="@color/light_grey"
        android:textColorHint="@color/light_grey"
        />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/caretakerIdTextBox"
        android:layout_centerHorizontal="true"
        android:text="@string/password_text"
        android:layout_marginTop="15sp"
        android:textColor="@color/light_grey"
        />

    <EditText
        android:id="@+id/passwordTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:layout_marginTop="10sp"
        android:inputType="textPassword"
        android:hint="@string/password_text_box_hint"
        android:backgroundTint="@color/light_grey"
        android:textColor="@color/light_grey"
        android:textColorHint="@color/light_grey"
        />

    <Button
        android:id="@+id/caretakerLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTextBox"
        android:layout_marginTop="40sp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_text"
        android:backgroundTint="@color/orange"
        android:textColor="@color/dark_grey"
        />

    <TextView
        android:id="@+id/inkRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/caretakerLoginButton"
        android:layout_marginTop="40sp"
        android:layout_centerHorizontal="true"
        android:text="@string/caretaker_new_registration_text"
        android:textSize="20sp"
        android:textColor="@color/blue"
        />
</RelativeLayout>